--- a/dx/sfdx-project.json
+++ b/dx/sfdx-project.json
@@ -2,7 +2,10 @@
   "packageDirectories": [
     {
       "path": "force-app",
-      "default": true
+      "default": true,
+      "id": "0Ho6A000000004ISAQ",
+      "versionName": "Version 0.1",
+      "versionNumber": "0.1.0.NEXT"
     }
   ],
   "namespace": "",
